--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoL Bingo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <h1>Welcome to LoL Bingo!</h1>
+
+    <div class="grid-container">
+        <div class="grid-item" id="1">1</div>
+        <div class="grid-item" id="2">2</div>
+        <div class="grid-item" id="3">3</div>
+        <div class="grid-item" id="4">4</div>
+        <div class="grid-item" id="5">5</div>
+        <div class="grid-item" id="6">6</div>
+        <div class="grid-item" id="7">7</div>
+        <div class="grid-item" id="8">8</div>
+        <div class="grid-item" id="9">9</div>
+        <div class="grid-item" id="10">10</div>
+        <div class="grid-item" id="11">11</div>
+        <div class="grid-item" id="12">12</div>
+        <div class="freespace clicked" id="13">Free space</div>
+        <div class="grid-item" id="14">14</div>
+        <div class="grid-item" id="15">15</div>
+        <div class="grid-item" id="16">16</div>
+        <div class="grid-item" id="17">17</div>
+        <div class="grid-item" id="18">18</div>
+        <div class="grid-item" id="19">19</div>
+        <div class="grid-item" id="20">20</div>
+        <div class="grid-item" id="21">21</div>
+        <div class="grid-item" id="22">22</div>
+        <div class="grid-item" id="23">23</div>
+        <div class="grid-item" id="24">24</div>
+        <div class="grid-item" id="25">25</div>
+    </div>
+
+
+    <script src="scripts/main.js"></script>
 </body>
 </html>
