Added popups and bingo recognition

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="grid-item" id="25">25</div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.3/popup.min.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
