Working with imgs and data persistence

--- a/index.html
+++ b/index.html
@@ -11,31 +11,36 @@
     <h1>Welcome to LoL Bingo!</h1>
 
     <div class="grid-container">
-        <div class="grid-item" id="1">1</div>
-        <div class="grid-item" id="2">2</div>
-        <div class="grid-item" id="3">3</div>
-        <div class="grid-item" id="4">4</div>
-        <div class="grid-item" id="5">5</div>
-        <div class="grid-item" id="6">6</div>
-        <div class="grid-item" id="7">7</div>
-        <div class="grid-item" id="8">8</div>
-        <div class="grid-item" id="9">9</div>
-        <div class="grid-item" id="10">10</div>
-        <div class="grid-item" id="11">11</div>
-        <div class="grid-item" id="12">12</div>
-        <div class="freespace clicked" id="13">Free space</div>
-        <div class="grid-item" id="14">14</div>
-        <div class="grid-item" id="15">15</div>
-        <div class="grid-item" id="16">16</div>
-        <div class="grid-item" id="17">17</div>
-        <div class="grid-item" id="18">18</div>
-        <div class="grid-item" id="19">19</div>
-        <div class="grid-item" id="20">20</div>
-        <div class="grid-item" id="21">21</div>
-        <div class="grid-item" id="22">22</div>
-        <div class="grid-item" id="23">23</div>
-        <div class="grid-item" id="24">24</div>
-        <div class="grid-item" id="25">25</div>
+
+        <img class="grid-item" draggable="false" id="1"></img>
+        <img class="grid-item" draggable="false" id="2"></img>
+        <img class="grid-item" draggable="false" id="3"></img>
+        <img class="grid-item" draggable="false" id="4"></img>
+        <img class="grid-item" draggable="false" id="5"></img>
+        <img class="grid-item" draggable="false" id="6"></img>
+        <img class="grid-item" draggable="false" id="7"></img>
+        <img class="grid-item" draggable="false" id="8"></img>
+        <img class="grid-item" draggable="false" id="9"></img>
+        <img class="grid-item" draggable="false" id="10"></img>
+        <img class="grid-item" draggable="false" id="11"></img>
+        <img class="grid-item" draggable="false" id="12"></img>
+        <img class="freespace clicked" draggable="false" src="../images/Free.png" id="13"></img>
+        <img class="grid-item" draggable="false" id="14"></img>
+        <img class="grid-item" draggable="false" id="15"></img>
+        <img class="grid-item" draggable="false" id="16"></img>
+        <img class="grid-item" draggable="false" id="17"></img>
+        <img class="grid-item" draggable="false" id="18"></img>
+        <img class="grid-item" draggable="false" id="19"></img>
+        <img class="grid-item" draggable="false" id="20"></img>
+        <img class="grid-item" draggable="false" id="21"></img>
+        <img class="grid-item" draggable="false" id="22"></img>
+        <img class="grid-item" draggable="false" id="23"></img>
+        <img class="grid-item" draggable="false" id="24"></img>
+        <img class="grid-item" draggable="false" id="25"></img>
+    </div>
+
+    <div class="d-flex justify-content-center my-3">
+        <button id="newGame" class="btn">New Game</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.3/popup.min.js"></script>
