fixed freespace aswell xd

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="grid-item" draggable="false" id="10"></img>
         <img class="grid-item" draggable="false" id="11"></img>
         <img class="grid-item" draggable="false" id="12"></img>
-        <img class="freespace clicked" draggable="false" src="../images/Free.png" id="13"></img>
+        <img class="freespace clicked" draggable="false" src="https://raw.githubusercontent.com/MatejHyskaGit/lolbingo/master/images/Free.png" id="13"></img>
         <img class="grid-item" draggable="false" id="14"></img>
         <img class="grid-item" draggable="false" id="15"></img>
         <img class="grid-item" draggable="false" id="16"></img>
