--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <h1>Welcome to LoL Bingo!</h1>
+    <img src="./images/Logo_alt.png" class="logo" draggable="false"></img>
 
     <div class="grid-container">
 
@@ -39,7 +39,7 @@
         <img class="grid-item" draggable="false" id="25"></img>
     </div>
 
-    <div class="d-flex justify-content-center my-3">
+    <div class="d-flex justify-content-center my-3" style="position: absolute; left: 0; top: 0;">
         <button id="newGame" class="btn">New Game</button>
     </div>
 
