--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <img src="./images/Logo_alt.png" class="logo" draggable="false"></img>
+    <img src="https://raw.githubusercontent.com/MatejHyskaGit/lolbingo/master/images/Logo_alt.png" class="logo" draggable="false"></img>
 
     <div class="grid-container">
 
