--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <img src="https://raw.githubusercontent.com/MatejHyskaGit/lolbingo/master/images/Logo.png" class="logo" draggable="false"></img>
     <div>
-        <div class="grid-container">
+        <div draggable="false" class="grid-container">
             <img class="grid-item" draggable="false" id="1"></img>
             <img class="grid-item" draggable="false" id="2"></img>
             <img class="grid-item" draggable="false" id="3"></img>
